unpackaged/main/default/objects/Opportunity/fields/Opportunity_Source__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Source__c</fullName>
    <label>Opportunity Creation Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SDR Created</fullName>
            </value>
            <value>
                <fullName>Rep Created</fullName>
            </value>
            <value>
                <fullName>Channel Created</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>