unpackaged/main/default/objects/Opportunity/fields/Origin_SalesforceIQ__c.field-meta.xml
<CustomField>
    <fullName>Origin_SalesforceIQ__c</fullName>
    <label>Origin (created by SalesforceIQ)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SalesforceIQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>