unpackaged/main/default/objects/Opportunity/fields/Other_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Other_Competitor__c</fullName>
    <description>This is the competitor for the opportunity when "other" is selected in either primary or secondary competitor</description>
    <inlineHelpText>This is the competitor for the opportunity when "other" is selected in either primary or secondary competitor</inlineHelpText>
    <label>Other Competitor</label>
    <type>TextArea</type>
</CustomField>