unpackaged/main/default/objects/Opportunity/fields/Pain__c.field-meta.xml
<CustomField>
    <fullName>Pain__c</fullName>
    <description>The impetus for any kind of organizational or process change</description>
    <inlineHelpText>Why anything - Business Pain moves you up in the org., technical pain moves you down - Why now? What are consequences? What is the urgency?</inlineHelpText>
    <label>Initiative/Pain</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>