unpackaged/main/default/objects/Opportunity/fields/Paper__c.field-meta.xml
<CustomField>
    <fullName>Paper__c</fullName>
    <description>The sequence of events required to obtain contract signatures post-validation/selection of a solution</description>
    <inlineHelpText>What needs to be signed? Who signs MSA, SO? Are there other documents and what is the process of obtaining signatures?</inlineHelpText>
    <label>Paper Process</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>