unpackaged/main/default/objects/Opportunity/fields/Paper_Process_Score__c.field-meta.xml
<CustomField>
    <fullName>Paper_Process_Score__c</fullName>
    <description>Who signs the Grafana SO and what order does the signature process flow in?</description>
    <inlineHelpText>--A score of 0 means the rep doesn’t know what needs to be signed. 
--A score of 1 means the rep knows everything that has to be signed. 
--A score of 2 means the rep knows everything that has to be signed, the order in which they need to be signed, and they can closely predict the closing date.</inlineHelpText>
    <label>Paper Process Score</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>