unpackaged/main/default/objects/Opportunity/fields/Payment_Frequency_Synced_Quote__c.field-meta.xml
<CustomField>
    <fullName>Payment_Frequency_Synced_Quote__c</fullName>
    <formula>TEXT( SyncedQuote.Payment_Frequency__c )</formula>
    <label>Payment Frequency (Synced Quote)</label>
    <type>Text</type>
</CustomField>