unpackaged/main/default/objects/Opportunity/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <formula>TEXT( SyncedQuote.Payment_Terms__c )</formula>
    <label>Payment Terms (Synced Quote)</label>
    <type>Text</type>
</CustomField>