unpackaged/main/default/objects/Opportunity/fields/PaymentFrequency__c.field-meta.xml
<CustomField>
    <fullName>PaymentFrequency__c</fullName>
    <description>This is the payment frequency from the quote</description>
    <formula>IF(ISBLANK(TEXT( SyncedQuote.Payment_Frequency__c )), TEXT(SBQQ__PrimaryQuote__r.PaymentFrequency__c),TEXT( SyncedQuote.Payment_Frequency__c ) )</formula>
    <inlineHelpText>This is the payment frequency from the quote</inlineHelpText>
    <label>Payment Frequency</label>
    <type>Text</type>
</CustomField>