unpackaged/main/default/objects/Opportunity/fields/PaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>PaymentTerms__c</fullName>
    <description>Payment terms from the quote</description>
    <formula>IF(ISBLANK(TEXT( SyncedQuote.Payment_Terms__c )),TEXT(SBQQ__PrimaryQuote__r.SBQQ__PaymentTerms__c ),TEXT( SyncedQuote.Payment_Terms__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Payment terms from the quote</inlineHelpText>
    <label>Payment Terms</label>
    <type>Text</type>
</CustomField>