unpackaged/main/default/objects/Opportunity/fields/PBO__c.field-meta.xml
<CustomField>
    <fullName>PBO__c</fullName>
    <description>Positive business objective</description>
    <inlineHelpText>What is the positive business impact of the prospect buying Grafana?

Be specific - i.e. "they're missing an SLA with their best customer and owe them 50k of downtime for each minute."</inlineHelpText>
    <label>PBO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>