unpackaged/main/default/objects/Opportunity/fields/Pipeline_ACV__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_ACV__c</fullName>
    <formula>IF ( AnnualContractValueACV__c &lt;&gt; 0, AnnualContractValueACV__c , IF (  Amount  &lt;&gt; 0, Amount, 40000))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checks for the following values by priority, ACV -&gt; Amount -&gt; 40k</inlineHelpText>
    <label>Pipeline ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>