unpackaged/main/default/objects/Opportunity/fields/POV_Duration__c.field-meta.xml
<CustomField>
    <fullName>POV_Duration__c</fullName>
    <description>calculates the duration of a POV</description>
    <formula>Trial_End_Date__c - Trial_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculate the length of time a POV occurred.</inlineHelpText>
    <label>POV Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>