unpackaged/main/default/objects/Opportunity/fields/Previous_Contract_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_Contract_Expiration_Date__c</fullName>
    <description>This date field shows the date of the previous contract open on an account and shows it on the opportunity</description>
    <inlineHelpText>This date field shows the date of the previous contract open on an account and shows it on the opportunity</inlineHelpText>
    <label>Previous Contract Expiration Date</label>
    <type>Date</type>
</CustomField>