unpackaged/main/default/objects/Opportunity/fields/Primary_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Primary_Competitor__c</fullName>
    <description>This is the primary competitor for the opportunity.</description>
    <inlineHelpText>This is the primary competitor for the opportunity.</inlineHelpText>
    <label>Primary Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Competitors</valueSetName>
    </valueSet>
</CustomField>