unpackaged/main/default/objects/Opportunity/fields/Primary_Field_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Primary_Field_Engineer__c</fullName>
    <description>Denotes who the primary field engineer from the SE team was on this opportunity</description>
    <inlineHelpText>Denotes who the primary field engineer from the SE team was on this opportunity</inlineHelpText>
    <label>Primary Field Engineer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Heds Simons</fullName>
            </value>
            <value>
                <fullName>Éamon Ryan</fullName>
            </value>
            <value>
                <fullName>Catherine Johnson</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>