unpackaged/main/default/objects/Opportunity/fields/Primary_Quote_Amount_Annualized__c.field-meta.xml
<CustomField>
    <fullName>Primary_Quote_Amount_Annualized__c</fullName>
    <formula>SBQQ__PrimaryQuote__r.Quote_Amount_Annualized__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Quote Amount (Annualized)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>