unpackaged/main/default/objects/Opportunity/fields/Primary_Solutions_Architect__c.field-meta.xml
<CustomField>
    <fullName>Primary_Solutions_Architect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Solutions Architect</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ServiceOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>