unpackaged/main/default/objects/Opportunity/fields/Primary_Technology_Partner__c.field-meta.xml
<CustomField>
    <fullName>Primary_Technology_Partner__c</fullName>
    <label>Primary Technology Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GCP</fullName>
            </value>
            <value>
                <fullName>Azure</fullName>
            </value>
            <value>
                <fullName>AWS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>