unpackaged/main/default/objects/Opportunity/fields/Products_c__c.field-meta.xml
<CustomField>
    <fullName>Products_c__c</fullName>
    <label>Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Products</valueSetName>
    </valueSet>
</CustomField>