unpackaged/main/default/objects/Opportunity/fields/QuoteCheckTemp__c.field-meta.xml
<CustomField>
    <fullName>QuoteCheckTemp__c</fullName>
    <description>Temporary field for the cpq cut over for Check Quote calculations. This is only for Q3 2021.</description>
    <formula>( ACVwithServices__c) -  (NACVTemp__c +  RACVTemp__c +  Services__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Temporary field for the cpq cut over for Check Quote calculations. This is only for Q3 2021.</inlineHelpText>
    <label>Quote Check (Temp)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>