unpackaged/main/default/objects/Opportunity/fields/RACV_Baseline__c.field-meta.xml
<CustomField>
    <fullName>RACV_Baseline__c</fullName>
    <inlineHelpText>This field is populated with the amount of the closed won opportunity that triggered the renewal creation</inlineHelpText>
    <label>RACV Baseline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>