unpackaged/main/default/objects/Opportunity/fields/RACVServicestemp__c.field-meta.xml
<CustomField>
    <fullName>RACVServicestemp__c</fullName>
    <description>Temporary field for the cpq cut over for RACV calculations. This is only for Q3 2021.</description>
    <formula>RACVTemp__c +  Services__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Temporary field for the cpq cut over for RACV calculations. This is only for Q3 2021.</inlineHelpText>
    <label>RACV + Services (Temp)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>