unpackaged/main/default/objects/Opportunity/fields/RACVTemp__c.field-meta.xml
<CustomField>
    <fullName>RACVTemp__c</fullName>
    <description>Temporary field for the cpq cut over for RACV calculations. This is only for Q3 2021.</description>
    <inlineHelpText>Temporary field for the cpq cut over for RACV calculations. This is only for Q3 2021.</inlineHelpText>
    <label>RACV (Temp)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>