unpackaged/main/default/objects/Opportunity/fields/Ready_for_Finance__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Finance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this box notifies finance of the opportunity and that it is ready for review</description>
    <inlineHelpText>Checking this box notifies finance of the opportunity and that it is ready for review</inlineHelpText>
    <label>Ready for Finance</label>
    <type>Checkbox</type>
</CustomField>