unpackaged/main/default/objects/Opportunity/fields/Referenceable__c.field-meta.xml
<CustomField>
    <fullName>Referenceable__c</fullName>
    <description>Is this customer willing to be a reference?</description>
    <inlineHelpText>Is this customer willing to be a reference?</inlineHelpText>
    <label>Referenceable?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>