unpackaged/main/default/objects/Opportunity/fields/Referred_By__c.field-meta.xml
<CustomField>
    <fullName>Referred_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Referral_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>