unpackaged/main/default/objects/Opportunity/fields/Renewal_Baseline_Amount_Annualized__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Baseline_Amount_Annualized__c</fullName>
    <formula>SBQQ__RenewedContract__r.Renewal_Contract_Amount_Annualized__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Baseline Amount (Annualized)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>