unpackaged/main/default/objects/Opportunity/fields/Renewal_Baseline_Delta_Annualized__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Baseline_Delta_Annualized__c</fullName>
    <formula>Primary_Quote_Amount_Annualized__c - Renewal_Baseline_Amount_Annualized__c +  Manual_Revenue_Adjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Baseline Delta (Annualized)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>