unpackaged/main/default/objects/Opportunity/fields/Renewal_Churn_Amount__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Churn_Amount__c</fullName>
    <description>Calculates the churn amount when NET RACV is less than RACV Baseline or when Deal Lost</description>
    <formula>IF (ISPICKVAL(StageName,"Deal Lost"),-RACV_Baseline__c, 
IF (Net_RACV__c - RACV_Baseline__c &gt; 0, 0, 
Net_RACV__c - RACV_Baseline__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates the churn amount when NET RACV is less than RACV Baseline or when Deal Lost</inlineHelpText>
    <label>Renewal Churn Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>