unpackaged/main/default/objects/Opportunity/fields/Renewal_Contracted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Contracted_Amount__c</fullName>
    <formula>Amount - RACV_Baseline__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field calculates the difference between the original contract and the renewal amount  (renewal amount - original amount)</inlineHelpText>
    <label>Renewal - Contracted Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>