unpackaged/main/default/objects/Opportunity/fields/Renewal_Current_Spend__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Current_Spend__c</fullName>
    <description>DONOTUSE this field is invalid.</description>
    <inlineHelpText>DONOTUSE Renewal - Current Spend This field is populated with the amount of the closed won opportunity that triggered the renewal creation</inlineHelpText>
    <label>DONOTUSE Renewal - Current Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>