unpackaged/main/default/objects/Opportunity/fields/Renewal_Health__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Health__c</fullName>
    <label>Renewal Health</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>