unpackaged/main/default/objects/Opportunity/fields/Renewal_Status__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Status__c</fullName>
    <description>Calculated via Flow Opportunity.AfterSave.Set Renewal Date &amp; Status</description>
    <inlineHelpText>Calculated via Flow</inlineHelpText>
    <label>Renewal Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>