unpackaged/main/default/objects/Opportunity/fields/Requested_Product_Features__c.field-meta.xml
<CustomField>
    <fullName>Requested_Product_Features__c</fullName>
    <description>Features the customer requested during the evaluation phase.</description>
    <inlineHelpText>Features the customer requested during the evaluation phase.</inlineHelpText>
    <label>Requested Product Features</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>