unpackaged/main/default/objects/Opportunity/fields/Revived_date__c.field-meta.xml
<CustomField>
    <fullName>Revived_date__c</fullName>
    <description>This date is set if an opportunity is moved from closed to open</description>
    <label>Revived date</label>
    <type>Date</type>
</CustomField>