unpackaged/main/default/objects/Opportunity/fields/Roadmap_Assurance__c.field-meta.xml
<CustomField>
    <fullName>Roadmap_Assurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Roadmap Assurance</label>
    <type>Checkbox</type>
</CustomField>