unpackaged/main/default/objects/Opportunity/fields/S3_Date_Week__c.field-meta.xml
<CustomField>
    <fullName>S3_Date_Week__c</fullName>
    <label>S3 Date - Week</label>
    <length>255</length>
    <type>Text</type>
</CustomField>