unpackaged/main/default/objects/Opportunity/fields/Sales_Play__c.field-meta.xml
<CustomField>
    <fullName>Sales_Play__c</fullName>
    <label>Sales Play</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OSS to Enterprise Adoption</fullName>
            </value>
            <value>
                <fullName>Legacy Observability</fullName>
            </value>
            <value>
                <fullName>Datadog Spend Reduction</fullName>
            </value>
            <value>
                <fullName>Prometheus Deployment at Scale</fullName>
            </value>
            <value>
                <fullName>Managed Graphite as a Service</fullName>
            </value>
            <value>
                <fullName>Other (details required)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>