unpackaged/main/default/objects/Opportunity/fields/Sales_Play_Details__c.field-meta.xml
<CustomField>
    <fullName>Sales_Play_Details__c</fullName>
    <description>This field gives the details behind why the Sales Play is custom</description>
    <inlineHelpText>Provide details as to what the use case is for this deal that doesn't meet our 5 sales plays.

These will be reviewed on a quarterly basis.</inlineHelpText>
    <label>Sales Play Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>