unpackaged/main/default/objects/Opportunity/fields/SDR_Approval_Qualifying__c.field-meta.xml
<CustomField>
    <fullName>SDR_Approval_Qualifying__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SDR Approval - Move to Qualifying</label>
    <type>Checkbox</type>
</CustomField>