unpackaged/main/default/objects/Opportunity/fields/SE_Approval_Champion_Alignment__c.field-meta.xml
<CustomField>
    <fullName>SE_Approval_Champion_Alignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SE Approval - Move to Champion Alignment</label>
    <type>Checkbox</type>
</CustomField>