unpackaged/main/default/objects/Opportunity/fields/SE_Owner__c.field-meta.xml
<CustomField>
    <fullName>SE_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Solutions Engineer</description>
    <label>SE Owner</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>contains</operation>
            <value>Solutions</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>