unpackaged/main/default/objects/Opportunity/fields/SE_Supporting__c.field-meta.xml
<CustomField>
    <fullName>SE_Supporting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Supporting Solutions Engineer</description>
    <label>Supporting SE</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>contains</operation>
            <value>Solutions</value>
        </filterItems>
        <filterItems>
            <field>User.Id</field>
            <operation>notEqual</operation>
            <valueField>$Source.SE_Owner__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>OpportunitiesSupporting</relationshipName>
    <type>Lookup</type>
</CustomField>