unpackaged/main/default/objects/Opportunity/fields/Secondary_SE__c.field-meta.xml
<CustomField>
    <fullName>Secondary_SE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary SE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>