unpackaged/main/default/objects/Opportunity/fields/SelfServeConvertedtoCloud__c.field-meta.xml
<CustomField>
    <fullName>SelfServeConvertedtoCloud__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This denotes when a self serve customer has converted from a self serve to a cloud account.</description>
    <inlineHelpText>This denotes when a self serve customer has converted from a self serve to a cloud account.</inlineHelpText>
    <label>Self Serve Converted to Cloud</label>
    <type>Checkbox</type>
</CustomField>