unpackaged/main/default/objects/Opportunity/fields/Service_End_Date_Synced_Quote__c.field-meta.xml
<CustomField>
    <fullName>Service_End_Date_Synced_Quote__c</fullName>
    <formula>SyncedQuote.Service_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service End Date (Synced Quote)</label>
    <type>Date</type>
</CustomField>