unpackaged/main/default/objects/Opportunity/fields/Service_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Start_Date__c</fullName>
    <formula>SyncedQuote.Service_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Start Date (Synced Quote)</label>
    <type>Date</type>
</CustomField>