unpackaged/main/default/objects/Opportunity/fields/ServiceEndDate__c.field-meta.xml
<CustomField>
    <fullName>ServiceEndDate__c</fullName>
    <description>End Date from the quote</description>
    <formula>IF(ISBLANK(TEXT(SyncedQuote.Service_End_Date__c)),  TEXT(SBQQ__PrimaryQuote__r.Quote_End_Date_CC__c), TEXT(SyncedQuote.Service_End_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>End Date from the quote</inlineHelpText>
    <label>Service End Date</label>
    <type>Text</type>
</CustomField>