unpackaged/main/default/objects/Opportunity/fields/ServicesStartDate__c.field-meta.xml
<CustomField>
    <fullName>ServicesStartDate__c</fullName>
    <description>Start date on the primary quote</description>
    <formula>IF(ISBLANK(TEXT(SyncedQuote.Service_Start_Date__c)), TEXT(SBQQ__PrimaryQuote__r.SBQQ__StartDate__c), TEXT(SyncedQuote.Service_Start_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Start date on the primary quote</inlineHelpText>
    <label>Services Start Date</label>
    <type>Text</type>
</CustomField>