unpackaged/main/default/objects/Opportunity/fields/Stage_0_Exploration__c.field-meta.xml
<CustomField>
    <fullName>Stage_0_Exploration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stage 0 - Exploration</label>
    <type>Checkbox</type>
</CustomField>