unpackaged/main/default/objects/Opportunity/fields/Stage_0_Exploration_Notes_Link__c.field-meta.xml
<CustomField>
    <fullName>Stage_0_Exploration_Notes_Link__c</fullName>
    <inlineHelpText>Please add a share link to your exploration discovery guide</inlineHelpText>
    <label>Stage 0 - Exploration Notes Link</label>
    <type>Url</type>
</CustomField>