unpackaged/main/default/objects/Opportunity/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage #</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>