unpackaged/main/default/objects/Opportunity/fields/Stage_Number__c.field-meta.xml
<CustomField>
    <fullName>Stage_Number__c</fullName>
    <description>Checks the value of the "StageName" picklist field on Opportunity Object. If it has a value it returns the stage number associated with that value, otherwise it returns 0.</description>
    <formula>CASE(StageName,
    'Qualified', 1,
        'Discovery',2,
            'Evaluation',3,
                'Verbal Commit/Tech Win',4,
                    'Contracting/Negotiation',5,
                        'Deal Won',6,
                            'Deal Lost',6,
    0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>