unpackaged/main/default/objects/Opportunity/fields/Status_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Status_Metrics__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green - Strong</fullName>
            </value>
            <value>
                <fullName>Yellow - Uncertain/Unknown</fullName>
            </value>
            <value>
                <fullName>Red - Roadblock, Red Flag, Blocker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>