unpackaged/main/default/objects/Opportunity/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Overage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>