unpackaged/main/default/objects/Opportunity/fields/Suggested_Re_engage_Date__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Re_engage_Date__c</fullName>
    <description>This date is manually selected by the rep at time of opportunity loss if lost to unresponsive or timing to indicate when would be a reasonable time to follow back up</description>
    <inlineHelpText>When should we reach out to this lost opportunity again?

This date will be used to automate reminders and follow up</inlineHelpText>
    <label>Suggested Re-engage Date</label>
    <type>Date</type>
</CustomField>