unpackaged/main/default/objects/Opportunity/fields/TCO_URL__c.field-meta.xml
<CustomField>
    <fullName>TCO_URL__c</fullName>
    <description>URL field for Account Team to link the TCO copy used in the opportunity</description>
    <inlineHelpText>URL field for Account Team to link the TCO copy used in the opportunity</inlineHelpText>
    <label>TCO URL</label>
    <type>Url</type>
</CustomField>