unpackaged/main/default/objects/Opportunity/fields/TCV_synced_quote__c.field-meta.xml
<CustomField>
    <fullName>TCV_synced_quote__c</fullName>
    <formula>SyncedQuote.TotalPrice -  Services__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TCV (Synced Quote)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>