unpackaged/main/default/objects/Opportunity/fields/TCVPrimaryQuote__c.field-meta.xml
<CustomField>
    <fullName>TCVPrimaryQuote__c</fullName>
    <description>This is the total contracted value without services included</description>
    <formula>SBQQ__PrimaryQuote__r.TotalQuotePrice__c -  Services__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the total contracted value without services included</inlineHelpText>
    <label>TCV (Primary Quote)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>