unpackaged/main/default/objects/Opportunity/fields/Technical_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Technical_Next_Steps__c</fullName>
    <label>Technical Next Steps</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>