unpackaged/main/default/objects/Opportunity/fields/Technical_Risks__c.field-meta.xml
<CustomField>
    <fullName>Technical_Risks__c</fullName>
    <label>Technical Risks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>