unpackaged/main/default/objects/Opportunity/fields/technical_win__c.field-meta.xml
<CustomField>
    <fullName>technical_win__c</fullName>
    <label>Technical Win</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>