unpackaged/main/default/objects/Opportunity/fields/Technology_Partner_Leveraged__c.field-meta.xml
<CustomField>
    <fullName>Technology_Partner_Leveraged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Technology Partner Leveraged?</label>
    <type>Checkbox</type>
</CustomField>