unpackaged/main/default/objects/Opportunity/fields/Term_Length_Synced_Quote__c.field-meta.xml
<CustomField>
    <fullName>Term_Length_Synced_Quote__c</fullName>
    <formula>TEXT(SyncedQuote.Term_Length__c)</formula>
    <label>Term Length (Synced Quote)</label>
    <type>Text</type>
</CustomField>