unpackaged/main/default/objects/Opportunity/fields/TermLength__c.field-meta.xml
<CustomField>
    <fullName>TermLength__c</fullName>
    <description>This is the subscription term from the quote</description>
    <formula>IF(ISBLANK(SyncedQuote.Months_in_Contract__c),(SBQQ__PrimaryQuote__r.SBQQ__SubscriptionTerm__c),(SyncedQuote.Months_in_Contract__c))</formula>
    <inlineHelpText>This is the subscription term from the quote</inlineHelpText>
    <label>Term Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>