unpackaged/main/default/objects/Opportunity/fields/Today_formula__c.field-meta.xml
<CustomField>
    <fullName>Today_formula__c</fullName>
    <formula>WEEKDAY(TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weekday (formula)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>